# Scanner

./: .gitgnore  CMakeLists.txt  README.md  Scanner.pro  camera.cpp  camera.h  docwork.cpp  docwork.h  docwork.ui  imageproc.cpp  imageproc.h  mainwindow.cpp  mainwindow.h
src/: camera.cpp  camera.hpp  camera.ui  docwork.cpp  docwork.hpp  imageproc.cpp  imageproc.hpp  imageproc.ui  mainwindow.cpp  mainwindow.hpp  mainwindow.ui
